# coda

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  SPEC.md  config.yaml.example  docker-compose.yml  langgraph.json  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
scripts/: run.sh
src/: __init__.py  main.py
src/agent/: __init__.py
src/agent/coding/: __init__.py  graph.py  loop.py  nodes.py  prompts.py  state.py  tools.py
src/config/: settings.py
src/git_ops/: __init__.py  repo.py
src/llm/: __init__.py  factory.py
tests/: __init__.py
tests/e2e/: __init__.py  test_agent.py
tests/integration/: test_git.py  test_github.py  test_langsmith.py  test_llm.py
tests/unit/: test_factory.py  test_git.py  test_graph.py  test_llm_factory.py  test_prompts.py  test_settings.py  test_tools.py
